--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -1,16 +1,74 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Base application theme - Yellowstone Dark Theme -->
     <style name="Theme.Yellowstone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/surface_background</item>
+        <item name="colorOnPrimary">@color/surface_background</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/selection_highlight</item>
+        <item name="colorSecondaryVariant">@color/border_color</item>
+        <item name="colorOnSecondary">@color/text_primary</item>
+
+        <!-- Surface colors -->
+        <item name="colorSurface">@color/surface_background</item>
+        <item name="colorOnSurface">@color/text_primary</item>
+        <item name="android:colorBackground">@color/surface_background</item>
+        <item name="colorOnBackground">@color/text_primary</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/surface_background</item>
+        <item name="android:navigationBarColor">@color/surface_background</item>
+
+        <!-- App bar styling -->
+        <item name="actionBarStyle">@style/YellowstoneActionBar</item>
+
+        <!-- Text appearances -->
+        <item name="textAppearanceHeadline6">@style/YellowstoneTextAppearance.AppBarTitle</item>
+        <item name="textAppearanceBody1">@style/YellowstoneTextAppearance.Body</item>
+        <item name="textAppearanceBody2">@style/YellowstoneTextAppearance.BodySecondary</item>
+
+        <!-- Card styling -->
+        <item name="materialCardViewStyle">@style/YellowstoneCardView</item>
+
+        <!-- Window settings for full dark theme -->
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
+    </style>
+
+    <!-- Action Bar styling -->
+    <style name="YellowstoneActionBar" parent="Widget.MaterialComponents.ActionBar.Primary">
+        <item name="background">@color/surface_background</item>
+        <item name="titleTextStyle">@style/YellowstoneTextAppearance.AppBarTitle</item>
+        <item name="elevation">0dp</item>
+        <item name="android:textColorPrimary">@color/primary</item>
+    </style>
+
+    <!-- Card styling to match theme -->
+    <style name="YellowstoneCardView" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">@android:color/transparent</item>
+        <item name="cardElevation">0dp</item>
+        <item name="cardCornerRadius">8dp</item>
+    </style>
+
+    <!-- Task card specific styling -->
+    <style name="YellowstoneTaskCard" parent="YellowstoneCardView">
+        <item name="cardCornerRadius">8dp</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
+
+    <!-- New task card styling -->
+    <style name="YellowstoneNewTaskCard" parent="YellowstoneCardView">
+        <item name="cardCornerRadius">0dp</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <!-- Chip styling -->
+    <style name="YellowstoneChip" parent="Widget.MaterialComponents.Chip.Entry">
+        <item name="chipBackgroundColor">@color/chip_background</item>
+        <item name="chipStrokeColor">@color/chip_border</item>
+        <item name="chipStrokeWidth">0.5dp</item>
+        <item name="android:textAppearance">@style/YellowstoneTextAppearance.ChipLabel</item>
     </style>
 </resources>
