UI: Visual change when in batch select mode

--- a/android/app/src/main/res/layout/item_task.xml
+++ b/android/app/src/main/res/layout/item_task.xml
@@ -23,6 +23,7 @@
 
         <CheckBox
             android:id="@+id/cb_task_selection"
+            style="@style/YellowstoneSelectionCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
